--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+@keyframes move-twinkle-back {
+    from {background-position: 0 0;}
+    to {background-position: -10000px 5000px;}
+}
+
+.stars, .twinkling{
+    position:absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.stars{
+    background: #000 url(./assets/images/stars.png) repeat top center ;
+    z-index: 0;
+    background-attachment: fixed;
+}
+
+.twinkling{
+    background: transparent url(./assets/images/twinkling.png) repeat top center;
+    z-index: 1;
+    background-attachment: fixed;
+    animation: move-twinkle-back 200s linear infinite;
+}
+
